# Kiva-SDK

./: .env.example  .gitignore  README.md  pyproject.toml  run_tests.sh
.github/workflows/: publish.yml  tests.yml
docs/: agent-router.md  e2e-testing-guide.md  execution-outputs.md  parallel-instances.md  run-streaming-api.md  verification.md
examples/: 01_high_level.py  02_mid_level.py  02_modular_app.py  03_low_level.py
src/kiva/: __init__.py  client.py  console.py  events.py  graph.py  run.py  state.py  verification.py
src/kiva/nodes/: __init__.py  analyze.py  verify.py
src/kiva/workflows/: __init__.py  executor.py  parliament.py  router.py  supervisor.py  utils.py
tests/: __init__.py  test_console.py  test_console_timeline_render.py  test_data_models.py  test_events.py  test_graph.py  test_instances.py  test_kiva.py  test_nodes.py  test_router.py  test_run.py  test_verification.py  test_verification_lifecycle.py  test_workflows.py
tests/e2e/: README.md  __init__.py  conftest.py  test_e2e_agent_router.py  test_e2e_consistency.py  test_e2e_console_output.py  test_e2e_error_handling.py  test_e2e_event_sequence.py  test_e2e_high_level_api.py  test_e2e_low_level_api.py  test_e2e_output_capture.py  test_e2e_output_validation.py  test_e2e_parallel_instances.py  test_e2e_parliament_workflow.py  test_e2e_router_workflow.py  test_e2e_supervisor_workflow.py
