[project]
name = "kiva-sdk"
version = "0.1.0"
description = "A multi-agent orchestration SDK for building intelligent workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Xingsandesu", email = "admin@jintongshu.com"}
]
maintainers = [
    {name = "Xingsandesu", email = "admin@jintongshu.com"}
]
keywords = [
    "multi-agent",
    "orchestration",
    "llm",
    "langchain",
    "langgraph",
    "ai",
    "workflow",
    "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
]

[project.optional-dependencies]
console = [
    "rich>=13.0.0",
]
dev = [
    "hypothesis>=6.150.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/Kiva-AI/Kiva-SDK"
Documentation = "https://github.com/Kiva-AI/Kiva-SDK#readme"
Repository = "https://github.com/Kiva-AI/Kiva-SDK"
Issues = "https://github.com/Kiva-AI/Kiva-SDK/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiva"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["tests", "examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D",      # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"
